# nexus-llm

./: .gitignore  README.md  pyproject.toml
src/nexus_llm/: config.py  factory.py  prompts.py
src/nexus_llm/.ipynb_checkpoints/: __init__-checkpoint.py
src/simple_llm/: __init__.py  exceptions.py  factory.py  llm_interface.py
src/simple_llm_interface.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
