[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-llm"
version = "0.1.0"
description = "A simple, high-level wrapper around LangChain for simplicity and convenience."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core>=0.2.0 , <1.0.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
    "PyYAML>=6.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "langchain-google-genai==2.1.9",
    "langchain-openai==0.3.35",
    "langchain-anthropic==0.3.22",
    "langchain-groq==0.3.8",
    "langchain-community",
    "langchain-ollama==0.3.10"
]

[project.urls]
Homepage = "https://github.com/muhammad-abdelsattar/nexus-llm"

# MODIFIED: This section is now primarily for convention and explicit dependency declaration,
# as the packages are already included in the base install.
# [project.optional-dependencies]
# google = ["langchain-google-genai"]
# openai = ["langchain-openai"]
# anthropic = ["langchain-anthropic"]
# groq = ["langchain-groq"]
# ollama = ["langchain-community", "langchain-ollama"]
#
# all = [
#     "nexus-llm[google]",
#     "nexus-llm[openai]",
#     "nexus-llm[anthropic]",
#     "nexus-llm[groq]",
#     "nexus-llm[ollama]",
# ]

[tool.setuptools.packages.find]
where = ["src"]
